src/snapshots/tptp__tests__file_name.snap
---
source: src/tests.rs
expression: parsed

---
FileName(
    SingleQuoted(
        "test",
    ),
)
