src/snapshots/tptp__tests__fof_annotated-5.snap
---
source: src/tests.rs
expression: parsed

---
FofAnnotated(
    Annotated {
        name: AtomicWord(
            Lower(
                LowerWord(
                    "test",
                ),
            ),
        ),
        role: FormulaRole(
            LowerWord(
                "axiom",
            ),
        ),
        formula: Formula(
            Unitary(
                Atomic(
                    Defined(
                        Plain(
                            DefinedPlainFormula(
                                Constant(
                                    DefinedConstant(
                                        DefinedFunctor(
                                            AtomicDefinedWord(
                                                DollarWord(
                                                    LowerWord(
                                                        "true",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        annotations: Annotations(
            Some(
                (
                    Source(
                        Data(
                            Atomic(
                                Lower(
                                    LowerWord(
                                        "unknown",
                                    ),
                                ),
                            ),
                        ),
                    ),
                    OptionalInfo(
                        Some(
                            UsefulInfo(
                                GeneralList(
                                    None,
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    },
)
