src/snapshots/tptp__tests__fof_annotated.snap
---
source: src/tests.rs
expression: parsed
---
FofAnnotated(
    Annotated {
        name: AtomicWord(
            Lower(
                LowerWord(
                    "test",
                ),
            ),
        ),
        role: Axiom,
        formula: Formula(
            Unitary(
                Atomic(
                    Defined(
                        Plain(
                            DefinedPlainFormula(
                                DefinedPlainTerm(
                                    DefinedConstant(
                                        DefinedFunctor(
                                            AtomicDefinedWord(
                                                DollarWord(
                                                    LowerWord(
                                                        "true",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        annotations: Annotations(
            None,
        ),
    },
)
