src/snapshots/tptp__tests__fof_arguments-3.snap
---
source: src/tests.rs
expression: parsed
---
Arguments(
    [
        Variable(
            Variable(
                UpperWord(
                    "X",
                ),
            ),
        ),
    ],
)
