src/snapshots/tptp__tests__fof_arguments.snap
---
source: src/tests.rs
expression: parsed

---
Arguments(
    [
        Function(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "c",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
