src/snapshots/tptp__tests__fof_atomic_formula-3.snap
---
source: src/tests.rs
expression: parsed

---
Defined(
    Infix(
        DefinedInfixFormula {
            left: Function(
                Plain(
                    Function(
                        Functor(
                            Lower(
                                LowerWord(
                                    "f",
                                ),
                            ),
                        ),
                        Arguments(
                            [
                                Variable(
                                    Variable(
                                        UpperWord(
                                            "X",
                                        ),
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
            ),
            op: DefinedInfixPred(
                InfixEquality,
            ),
            right: Variable(
                Variable(
                    UpperWord(
                        "Y",
                    ),
                ),
            ),
        },
    ),
)
