src/snapshots/tptp__tests__fof_atomic_formula-5.snap
---
source: src/tests.rs
expression: parsed

---
Plain(
    PlainAtomicFormula(
        Function(
            Functor(
                Lower(
                    LowerWord(
                        "p",
                    ),
                ),
            ),
            Arguments(
                [
                    Variable(
                        Variable(
                            UpperWord(
                                "X",
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ),
)
