src/snapshots/tptp__tests__fof_atomic_formula-7.snap
---
source: src/tests.rs
expression: parsed
---
System(
    SystemAtomicFormula(
        Constant(
            SystemConstant(
                SystemFunctor(
                    AtomicSystemWord(
                        DollarDollarWord(
                            LowerWord(
                                "system",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
